# pipe-debug

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  api.py  api_v1.py  app.py  benchmark.py  build.py  docker-compose.yaml  example-graph.json  pipeline.py  pyproject.toml  store.sqlite  test.http
.devcontainer/: devcontainer.json
datapipe_app/: __init__.py  cli.py
frontend/: .env.local  package.json  tsconfig.json
frontend/src/: App.tsx  example.js  index.tsx  types.ts
frontend/src/features/: index.tsx
frontend/src/features/cy/: index.tsx  process.ts  style.css  stylesheet.ts
frontend/src/features/table/: index.tsx
pipe-debug/: .env.local  .rescriptsrc.js  package.json
pipe-debug/src/: App.css
pipe-debug/src/features/cy/: index.tsx
